kubernetes/clusters/skovald/apps/security/authentik/outpost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ako.${EXTERNAL_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${EXTERNAL_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: "${EXTERNAL_DOMAIN}"
      http:
        paths:
          - backend:
                # Or, to use an external Outpost, create an ExternalName service and reference that here.
                # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  name: http
            path: /outpost.goauthentik.io
            pathType: Prefix
